added the wiring to insert, update or delete a range